# visual-buffet

./: -  .gitignore  .gitmodules  CLAUDE.md  README.md  braun-design-verification.skill  lilbits.md  ocr_benchmark_results.json  ocr_comparison_results.json  pyproject.toml  setup.sh  techguide.md
.claude/: settings.local.json
@eaDir/: .venv@SynoResource  braun-design-verification.skill@SynoEAStream
design/fonts/@eaDir/: BraunLinear-Thin.woff2@SynoEAStream  stylesheet.css@SynoEAStream
docs/: DEVELOPMENT.md  developer-guide.md  implementation-plan.md  ocr_strategy.md  ocr_verification_architecture.md  plugin-development.md
docs/plans/: index-card-design.md
docs/reference/: florence_2_settings.md  paddle_ocr_settings.md  ram_plus_settings.md  siglip_settings.md
docs/sme/: florence_2.sme.md  ram_plus.sme.md  siglip.sme.md  siglip_verification_analysis.md
images/: 0f76a3c3de3d7ea6_tags.json  Buffalo State Hospital (57)_tags.json  DJI_0412_tags.json  _DSC0008_tags.json  _MG_5043_tags.json  img012_tags.json  testimage01.jpg.xmp  testimage01_tags.json  testimage02.jpg.xmp  testimage02_tags.json  testimage03.jpg.xmp  testimage03_tags.json  testimage04.jpg.xmp  testimage04_tags.json  testimage05.jpg.xmp  testimage05_tags.json  testimage06.jpg.xmp  testimage06_tags.json  testimage07.jpg.xmp  testimage07_tags.json  testimage08.jpg.xmp  testimage08_tags.json  testimage09.jpg.xmp  testimage09_tags.json  testimage10.jpg.xmp  testimage10_tags.json
images/@eaDir/: _DSC0008.ARW@SynoEAStream  img012.tif@SynoEAStream  testimage01.jpg@SynoEAStream  testimage02.jpg@SynoEAStream  testimage04.jpg@SynoEAStream  testimage05.jpg@SynoEAStream  testimage06.jpg@SynoEAStream  testimage08.jpg@SynoEAStream  testimage09.jpg@SynoEAStream  testimage10.jpg@SynoEAStream
images/visual-buffet/: testimage01_2048_tags.json  testimage01_tags.json  testimage02_tags.json  testimage03_1080_tags.json  testimage03_tags.json  testimage04_tags.json  testimage05_tags.json  testimage06_tags.json  testimage07_tags.json  testimage08_tags.json  testimage09_tags.json  testimage10_tags.json
plugins/doctr/: __init__.py  plugin.toml
plugins/easyocr/: __init__.py  plugin.toml
plugins/florence_2/: __init__.py  plugin.toml
plugins/paddle_ocr/: __init__.py  plugin.toml
plugins/qwen3_vl/: __init__.py  plugin.toml  prompts.py
plugins/ram_plus/: __init__.py  downloader.py  inference_flat_threshold.py  inference_with_scores.py  plugin.toml
plugins/siglip/: __init__.py  plugin.toml
plugins/surya_ocr/: __init__.py  plugin.toml
plugins/yolo/: __init__.py  plugin.toml
scripts/: analysis_utils.py  analyze_results.py  compare_ocr.py  generate_variants.py  ocr_benchmark.py  ocr_direct_test.py  run_quality_test.py  test_ocr_verification.py  test_siglip_ocr_validation.py
sme/: doctr.md  florence-2.md  multi-model-image-tagging.md  ocr-plugins-implementation-guide.md  ocr-plugins-integration-plan.md  ocr-tools.md  ram-plus-image-tagging.md  siglip.md  surya-ocr.md  testing-strategy-image-processing-cli.md  vocabulary-tracking-system.md  yolo.md
sme/audits/: gui-vs-cli-parity-2025-12-21.md  integration-plan-audit-2024-12-22.md  ram-plus-confidence-boost-proposal-2025-12-21.md  siglip-plugin-vs-vlm-skill-2025-12-21.md
src/imlage/: __init__.py  cli.py  exceptions.py
src/imlage/core/: __init__.py  engine.py  hardware.py
src/imlage/gui/: __init__.py  server.py
src/imlage/gui/static/: app.js  index.html  styles.css
src/imlage/plugins/: __init__.py  base.py  schemas.py
src/imlage/utils/: __init__.py  config.py  image.py
src/visual_buffet/: __init__.py  cli.py  constants.py  exceptions.py  vocab_integration.py
src/visual_buffet/core/: __init__.py  engine.py  hardware.py  progress_reporter.py
src/visual_buffet/daemon/: __init__.py  client.py  model_pool.py  protocol.py  server.py
src/visual_buffet/gui/: __init__.py  server.py
src/visual_buffet/gui/static/: app.js  index.html  styles.css
src/visual_buffet/plugins/: __init__.py  base.py  loader.py  schemas.py
src/visual_buffet/services/: __init__.py  ocr_verification.py  xmp_handler.py
src/visual_buffet/utils/: __init__.py  config.py  image.py  progress.py
src/vocablearn/: __init__.py  __main__.py  api.py  app_config.py  cli.py  models.py
src/vocablearn/learning/: __init__.py  active.py  calibration.py  priors.py
src/vocablearn/ml/: __init__.py  classifier.py  cooccurrence.py  embeddings.py
src/vocablearn/storage/: __init__.py  ocr.py  sqlite.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_constants.py  test_engine.py  test_exceptions.py  test_hardware.py  test_image.py  test_ml_classifier.py  test_ml_cooccurrence.py  test_ml_embeddings.py  test_plugins.py  test_progress_reporter.py  test_schemas.py  test_server.py  test_vocab_cli.py  test_xmp_handler.py
tests/benchmark/: README.md  florence_2_comprehensive_test.py  florence_2_standalone.py  florence_2_task_analysis.py  ram_plus_settings_test.py  ram_plus_tag_analysis.py  ram_plus_threshold_analysis.py  siglip_verification_suite.py
tests/fixtures/schemas/: tag_result.schema.json  test_image_expectations.json
tests/unit/: test_cli_behavior.py  test_schema_validation.py
tests/utils/: __init__.py  run_comparison.py
