[project]
name = "imlage"
version = "0.1.0"
description = "Image Machine Learning Aggregate - Compare visual tagging results from local ML tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Bryant" }
]
keywords = ["image", "machine-learning", "tagging", "cli", "comparison"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pillow>=10.0",
    "psutil>=5.9",
    "tomli-w>=1.0",
    "tomli>=2.0;python_version<'3.11'",
    "rawpy>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
gui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
ml = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
]
ram_plus = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "recognize-anything @ git+https://github.com/xinyu1205/recognize-anything.git",
]

[project.scripts]
imlage = "imlage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imlage"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
